--- a/personal resume.html
+++ b/personal resume.html
@@ -6,16 +6,20 @@
 	<title>个人简历</title>
 	<style type="text/css" >
 
+
     
 	</style>
 </head>
 <body>
-
+<div class="box">
+	
 <div class="box1">
 
 </div>
 
 <div class="box2">
+
+</div>
 
 </div>
 </body>
