基本信息做完

--- a/personal resume.html
+++ b/personal resume.html
@@ -16,11 +16,25 @@
 <div class="box1">
 	<div class="box1-1">
 		<img src="img/1.jpg" width="150" height="150">
-		<dl>
-			<dd>房榆珠</dd>
-			<dd>中山大学南方学院/学生</dd>
-		</dl></div>
+            <ul>
+			<ol>房榆珠</ol>
+			<ol>中山大学南方学院/学生</ol></ul>
 </div>
+    <div class="box1-2">
+    	<img src="img/2.png" width="40" height="40">&nbsp;
+    	<strong>基本信息</strong>
+    	<ul>个人信息&nbsp;&nbsp;&nbsp;
+    	    <ol>房榆珠/女/20岁</ol></ul>
+        <ul>英语水平&nbsp;&nbsp;&nbsp;
+        	<ol>四级待过</ol></ul>
+        <ul>计算机水平
+        	<ol>菜鸟一枚</ol></ul>
+    
+    </div>
+    
+
+</div>
+
 
 <div class="box2">
 
