--- a/personal resume.html
+++ b/personal resume.html
@@ -13,13 +13,14 @@
 <body>
 <div class="box">
 
-<div class="box1">
+    <div class="box1">
 	<div class="box1-1">
 		<img src="img/1.jpg" width="150" height="150">
             <ul>
 			<ol>房榆珠</ol>
 			<ol>中山大学南方学院/学生</ol></ul>
-</div>
+    </div>
+
     <div class="box1-2">
     	<img src="img/2.png" width="40" height="40">&nbsp;
     	<strong>基本信息</strong>
@@ -32,6 +33,19 @@
     
     </div>
     
+    <div class="box1-3">
+    	<img src="img/3.png" width="40" height="40">&nbsp;
+    	<strong>联系方式</strong>
+    	<ul>手机&nbsp;&nbsp;&nbsp;&nbsp;
+    		<ol>18219360308</ol>
+    	</ul>
+    	<ul>邮箱&nbsp;&nbsp;&nbsp;&nbsp;
+    		<ol>18219360308@163.com</ol>
+    	</ul>
+    	<ul>Github
+    		<ol>github.com/FFFang1005</ol>
+    	</ul>
+    </div>
 
 </div>
 
