修改为SVG图片 增加技能栏

--- a/personal resume.html
+++ b/personal resume.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="box1-2">
-    	<img src="img/2.png" width="40" height="40">&nbsp;
+    	<img src="svg/1.svg" width="40" height="40">&nbsp;
     	<strong>基本信息</strong>
     	<ul>个人信息&nbsp;&nbsp;&nbsp;
     	    <ol>房榆珠/女/20岁</ol></ul>
@@ -34,7 +34,7 @@
     </div>
     
     <div class="box1-3">
-    	<img src="img/3.png" width="40" height="40">&nbsp;
+    	<img src="svg/2.svg" width="40" height="40">&nbsp;
     	<strong>联系方式</strong>
     	<ul>手机&nbsp;&nbsp;&nbsp;&nbsp;
     		<ol>18219360308</ol>
@@ -44,6 +44,23 @@
     	</ul>
     	<ul>Github
     		<ol>github.com/FFFang1005</ol>
+    	</ul>
+    </div>
+
+    <div class="box1-4">
+    	<img src="svg/3.svg" width="40" height="40">&nbsp;
+    	<strong>技能</strong>
+    	<ul>吃&nbsp;&nbsp;&nbsp;&nbsp;
+    		<ol>✔✔✔✔✔✔✔✔✔✔✔✔</ol>
+    	</ul>
+    	<ul>喝&nbsp;&nbsp;&nbsp;&nbsp;
+    		<ol>✔✔✔✔✔✔✔✔✔✔✔</ol>
+    	</ul>
+    	<ul>玩&nbsp;&nbsp;&nbsp;&nbsp;
+    		<ol>✔✔✔✔✔✔✔✔✔✔✔✔✔✔</ol>
+    	</ul>
+    	<ul>睡&nbsp;&nbsp;&nbsp;&nbsp;
+    		<ol>✔✔✔✔✔✔✔✔✔✔✔✔</ol>
     	</ul>
     </div>
 
