左侧固定架构搞定

--- a/personal resume.html
+++ b/personal resume.html
@@ -64,6 +64,13 @@
     	</ul>
     </div>
 
+<div class="box1-5">
+    	<img src="svg/4.svg" width="40" height="40">&nbsp;
+    	<strong>二维码</strong>
+    	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    	<img src="img/2.jpg" width="100" height="100">
+    </div>
+
 </div>
 
 
