--- a/personal resume.html
+++ b/personal resume.html
@@ -75,6 +75,17 @@
 
 
 <div class="box2">
+	<div class="box2-1">
+		<img src="svg/5.svg" width="40" height="40">
+		<strong>教育经历</strong>
+		<ul>中山大学南方学院 - 数字媒体技术
+			<ol>
+				201X.9-201X.7
+专业排名 X/XX，期间发表国内核心期刊文章X篇，三等奖学金X次。
+			</ol>
+			
+		</ul>
+	</div>
 
 </div>
 
