--- a/personal resume.html
+++ b/personal resume.html
@@ -79,9 +79,8 @@
 		<img src="svg/5.svg" width="40" height="40">
 		<strong>教育经历</strong>
 		<ul>中山大学南方学院 - 数字媒体技术
-			<ol>
-				201X.9-201X.7
-专业排名 X/XX，期间发表国内核心期刊文章X篇，三等奖学金X次。
+			201X.9-201X.7
+			<ol>专业排名 X/XX，期间发表国内核心期刊文章X篇，三等奖学金X次。
 			</ol>
 			
 		</ul>
@@ -91,17 +90,17 @@
 		<img src="svg/6.svg" width="40" height="40">
 		<strong>项目经历</strong>
 		<ul>[经历1]XX公司－前端开发工程师（实习）
-2016.X 至 2017.X
-<ol>深度参与XX项目迭代XX的前端开发工作，独立承担并完成XX、XX、XXXX等功能点的开发，主要维护并修复XX、XX、XX等功能点bug若干。项目采用技术栈 React+React Router+Node.js+SASS，实现 前后端完全分离。
-配合UI和后端，根据产品需求提供H5页面嵌入到后台模板，要求 移动端显示正常。
-主要参与XXXXXXX的静态页面开发工作，要求 在支付宝环境下完全兼容。</ol>
+            2016.X 至 2017.X
+            <ol>深度参与XX项目迭代XX的前端开发工作，独立承担并完成XX、XX、XXXX等功能点的开发，主要维护并修复XX、XX、XX等功能点bug若干。项目采用技术栈 React+React Router+Node.js+SASS，实现 前后端完全分离。
+            配合UI和后端，根据产品需求提供H5页面嵌入到后台模板，要求 移动端显示正常。
+            主要参与XXXXXXX的静态页面开发工作，要求 在支付宝环境下完全兼容。</ol>
 
      <div class="box2-3">
 		<img src="svg/7.svg" width="40" height="40">
 		<strong>自我期望</strong>
 		<ul>突破挑战自我
-<ol>[此处如果有一些能够量化的、且比较个性的指标会有加分，比如喜爱跑步坚持夜跑200小时或者200km等] “多静多思考，反省不张扬”是我给自己总结的“十字箴言”，鞭策自己做人既不能以己度人，也不以人观己，要脚踏实地做事，坚持自己的梦想和本心</ol>
-			
+			<ol>喜欢跑步，喜欢挑战自我
+			 “多静多思考，反省不张扬”是我给自己总结的“十字箴言”，鞭策自己做人既不能以己度人，也不以人观己，要脚踏实地做事，坚持自己的梦想和本心</ol>	
 		</ul>
 	</div>
 
