完善细节 更改配色

--- a/personal resume.html
+++ b/personal resume.html
@@ -51,16 +51,16 @@
     	<img src="svg/3.svg" width="40" height="40">&nbsp;
     	<strong>技能</strong>
     	<ul>吃&nbsp;&nbsp;&nbsp;&nbsp;
-    		<ol>✔✔✔✔✔✔✔✔✔✔✔✔</ol>
+    		<ol class="ha">✔✔✔✔✔✔✔✔✔✔✔✔</ol>
     	</ul>
     	<ul>喝&nbsp;&nbsp;&nbsp;&nbsp;
-    		<ol>✔✔✔✔✔✔✔✔✔✔✔</ol>
+    		<ol class="ha">✔✔✔✔✔✔✔✔✔✔✔</ol>
     	</ul>
     	<ul>玩&nbsp;&nbsp;&nbsp;&nbsp;
-    		<ol>✔✔✔✔✔✔✔✔✔✔✔✔✔✔</ol>
+    		<ol class="ha">✔✔✔✔✔✔✔✔✔✔✔✔✔✔</ol>
     	</ul>
     	<ul>睡&nbsp;&nbsp;&nbsp;&nbsp;
-    		<ol>✔✔✔✔✔✔✔✔✔✔✔✔</ol>
+    		<ol class="ha">✔✔✔✔✔✔✔✔✔✔✔✔</ol>
     	</ul>
     </div>
 
@@ -93,7 +93,7 @@
             2016.X 至 2017.X
             <ol>深度参与XX项目迭代XX的前端开发工作，独立承担并完成XX、XX、XXXX等功能点的开发，主要维护并修复XX、XX、XX等功能点bug若干。项目采用技术栈 React+React Router+Node.js+SASS，实现 前后端完全分离。
             配合UI和后端，根据产品需求提供H5页面嵌入到后台模板，要求 移动端显示正常。
-            主要参与XXXXXXX的静态页面开发工作，要求 在支付宝环境下完全兼容。</ol>
+            主要参与XXXXXXX的静态页面开发工作，要求 在支付宝环境下完全兼容。</ol></div>
 
      <div class="box2-3">
 		<img src="svg/7.svg" width="40" height="40">
