--- a/presonal-resume(no href).html
+++ b/presonal-resume(no href).html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="1.css">
+    <link rel="stylesheet" href="1(finally).css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>个人简历</title>
 	<style type="text/css" >
