--- a/presonal-resume.html
+++ b/presonal-resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="css/1.css">
+    <link rel="stylesheet" href="1(finally).css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>个人简历</title>
 	<style type="text/css" >
@@ -15,14 +15,14 @@
 
     <div class="box1">
 	<div class="box1-1">
-		<img src="img/1.jpg" width="150" height="150">
+		<img src="1.jpg" width="150" height="150">
             <ul>
 			<ol>房榆珠</ol>
 			<ol>中山大学南方学院/学生</ol></ul>
     </div>
 
     <div class="box1-2">
-    	<img src="svg/1.svg" width="40" height="40">&nbsp;
+    	<img src="1.svg" width="40" height="40">&nbsp;
     	<strong>基本信息</strong>
     	<ul>个人信息&nbsp;&nbsp;&nbsp;
     	    <ol>房榆珠/女/20岁</ol></ul>
@@ -34,7 +34,7 @@
     </div>
     
     <div class="box1-3">
-    	<img src="svg/2.svg" width="40" height="40">&nbsp;
+    	<img src="2.svg" width="40" height="40">&nbsp;
     	<strong>联系方式</strong>
     	<ul>手机&nbsp;&nbsp;&nbsp;&nbsp;
     		<ol>18219360308</ol>
@@ -48,7 +48,7 @@
     </div>
 
     <div class="box1-4">
-    	<img src="svg/3.svg" width="40" height="40">&nbsp;
+    	<img src="3.svg" width="40" height="40">&nbsp;
     	<strong>技能</strong>
     	<ul>吃&nbsp;&nbsp;&nbsp;&nbsp;
     		<ol class="ha">✔✔✔✔✔✔✔✔✔✔✔✔</ol>
@@ -65,10 +65,10 @@
     </div>
 
 <div class="box1-5">
-    	<img src="svg/4.svg" width="40" height="40">&nbsp;
+    	<img src="4.svg" width="40" height="40">&nbsp;
     	<strong>二维码</strong>
     	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    	<img src="img/2.jpg" width="100" height="100">
+    	<img src="2.jpg" width="100" height="100">
     </div>
 
 </div>
@@ -76,7 +76,7 @@
 
 <div class="box2">
 	<div class="box2-1">
-		<img src="svg/5.svg" width="40" height="40">
+		<img src="5.svg" width="40" height="40">
 		<strong>教育经历</strong>
 		<ul>中山大学南方学院 - 数字媒体技术
 			201X.9-201X.7
@@ -87,7 +87,7 @@
 	</div>
 
 	<div class="box2-2">
-		<img src="svg/6.svg" width="40" height="40">
+		<img src="6.svg" width="40" height="40">
 		<strong>项目经历</strong>
 		<ul>[经历1]XX公司－前端开发工程师（实习）
             2016.X 至 2017.X
@@ -96,7 +96,7 @@
             主要参与XXXXXXX的静态页面开发工作，要求 在支付宝环境下完全兼容。</ol></div>
 
      <div class="box2-3">
-		<img src="svg/7.svg" width="40" height="40">
+		<img src="7.svg" width="40" height="40">
 		<strong>自我期望</strong>
 		<ul>突破挑战自我
 			<ol>喜欢跑步，喜欢挑战自我
